<resources>
    <string name="app_name">ShoeStore</string>
    <string name="new_user">New</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_presentation">This is the new shoe store app</string>
    <string name="next">Next</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_presetation">Here are the instructions for using the application:
        \n\n - Instruction 1
        \n\n - Instruction 2
        \n\n - Instruction 3
    </string>
    <string name="title_activity_delete">DeleteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoe_name">Shoe Name:</string>
    <string name="company">Company:</string>
    <string name="shoe_size">Shoe Size:</string>
    <string name="description">Description:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>
